--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ pico_enable_stdio_usb(ProjetoControleSerial 1)
 target_link_libraries(ProjetoControleSerial
         pico_stdlib)
 
+target_link_libraries(ProjetoControleSerial pico_stdlib hardware_pwm)
 # Add the standard include files to the build
 target_include_directories(ProjetoControleSerial PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
