Configuração do led vermelho

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,7 @@
         "ms-vscode.cpptools",
         "raspberry-pi.raspberry-pi-pico",
         "ms-vscode.vscode-serial-monitor",
-        "ms-vscode.cpptools-extension-pack",
-        "marus25.cortex-debug"
+        "marus25.cortex-debug",
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
