Correção da Função bootsel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,7 @@ pico_enable_stdio_usb(ProjetoControleSerial 1)
 # Add the standard library to the build
 target_link_libraries(ProjetoControleSerial
         pico_stdlib
-        hardware_pwm
-        bootrom)
+        hardware_pwm)
 
 # Add the standard include files to the build
 target_include_directories(ProjetoControleSerial PRIVATE
